# aqa-assembly-emulator

./: .gitignore  TODO.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
.devcontainer/: devcontainer.json
.github/workflows/: build_and_deploy.yml
engine/: Cargo.toml  build.sh
engine/proptest-regressions/: lib.txt
engine/src/: assembler.rs  deserialise.rs  emulator.rs  grammar.pest  lib.rs  macros.rs  main.rs  parser.old.rs  parser.rs  serialise.rs
src/: app.css  app.html
src/lib/: Controls.svelte  Memory.svelte  Registers.svelte  aqa_assmbly.ts  globals.ts
src/routes/: +page.svelte
