[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.95"
bitvec = "1.0.1"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
funty = "2.0.0"
log = "0.4.25"
num-derive = "0.4.2"
num-traits = "0.2.19"
pest = "2.7.15"
pest_derive = "2.7.15"
serde = { version = "1.0.217", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
strum = "0.27.1"
strum_macros = "0.27.1"
wasm-bindgen = "0.2.100"


[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[dev-dependencies]
proptest = "1.6.0"
proptest-derive = "0.5.1"
simple_logger = "5.0.0"
